P5 Glove/include/P5DLLc.h

/*////////////////////////////////////////////////////////////////////////////////////
 P5Data
 This is the original data structure that all the glove's information was stored in.
 It is missing a lot of information, so two new data structures were created also.
 The new data structures should be used instead of this one most of the time.
 This one is mostly for backwards compatibility
////////////////////////////////////////////////////////////////////////////////////*/

typedef struct
{
	/*
      Actual P5 variables
    */
	char VendorID[50], ProductID[50], Version[50];
	char ProductString[255], ManufacturerString[255], SerialNumString[255];

	int m_nDeviceID;
	int m_nMajorRevisionNumber, m_nMinorRevisionNumber;

	int m_nGloveType;

	float m_fx, m_fy, m_fz;					/* x,y,z of the hand */
	float m_fyaw, m_fpitch, m_froll;		/* yaw\pitch\roll of the hand */
	unsigned char m_byBendSensor_Data[5];	/* All the bend sensor data */
	unsigned char m_byButtons[4];			/* P5 Button data */
	float m_fRotMat[3][3];				    /* matrix for inverse kinematics */

/*
   The fields below only exist in special debug versions of the DLL file.
   But don't worry, the same information is available in the new P5State structure.

   for distribution delete these lines
*/
#ifdef P5DLL_DEBUG
	float VisLedPos[4][3];		/* X\Y\Z of visible LEDs */
	float m_fV1Angle[4], m_fV2Angle[4], m_fHAngle[4];	/* Angle of entry of visible LEDs */
	unsigned char m_byLEDNum[4];						/* Visible LEDs */
	int m_nlastBrightLED[4];
	unsigned char m_RawDistalSensor_Data[5];
	unsigned int LED0[3], LED1[3], LED2[3], LED3[3];
	float ActualLED_X[10];
	float ActualLED_Y[10];
	float ActualLED_Z[10];
#endif

}P5Data;
typedef struct {
/* Location */
	float x, y, z;				/* x,y,z of the hand */
	float RelativeX, RelativeY, RelativeZ;
	float RelativeAvgX, RelativeAvgY, RelativeAvgZ;
    float FilterPos[3];

    float Velocity[3];
    float Acceleration[3];

/* Rotation    */
    float RotMat[3][3]; /* rotation matrix [row][column] like Direct3D, premultiply by row vector */
	float pitch, yaw, roll;
    float FilterRotMat[3][3];
	float FilterPitch, FilterYaw, FilterRoll;
    float AngularVelocity[3]; /* around the x, y, and z axes */
    float AngularAcceleration[3];

/* Visibility */
    int Visible;

	
/* Fingers */
	unsigned char finger[5];	/* All the bend sensor data */
    short FingerAbsolute[5];
    float FingerVelocity[5];
    float FingerAcceleration[5];

/* Buttons */
	unsigned char button[4];	/*P5 Button data*/

/* Leds */
	float LedPos[10][3];		   /* Position of 10 LEDs */
    float LedVelocity[10][3];      /* Velocity of 10 LEDs */
    float LedGeometricAccuracy[10];/* Dot product of vectors to other LEDs */
    unsigned char LedVisible[10];  /* 1 if visible, 0 if not */
    int TrackedLed;
     
/* Visible Leds */
    int VisibleLedCount;
	signed char VisibleLedNumber[4];  /* Which of the 10 LEDs is each visible one */
	int VisibleLedRaw[4][3]; /* Raw Led values -512 to +511 */
	float VisibleLedV1Angle[4], VisibleLedV2Angle[4], VisibleLedHAngle[4];  /*Angle of entry of visible LEDs*/
    float VisibleLedPos[4][3]; /* debug */
    

/* Time */
	double TimeStamp;
    float FrameRate;
    long long Frame;


} P5State;
typedef struct {
	char VendorID[52], ProductID[52], Version[52];
	char ProductString[256], ManufacturerString[256], SerialNumString[256];
	int DeviceID;
	int MajorRevisionNumber, MinorRevisionNumber;
	int GloveType;

	/* Physical Led Layout */
	float ActualLedPos[10][3];
	float LEDDistances[10][10];

	/* Global tan compensation data */
	float Head1_VAngle, Head_HAngle, Head2_VAngle, Head2_HAngle;
	float HeadSeparation;

    /* AC Adaptrer Status */
    P5BOOL ACAdapterStatus;

    /* Finger Calibration */
    int FingerStraight[5];
    int FingerBent[5];

	/* Handles */
	void  *DeviceHandle; /* PHID_DEVICE */

	unsigned int ThreadId;
	unsigned int ThreadHandle;
	P5BOOL ThreadStatus;

} P5Info;